Fix dialog on smaller devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -82,7 +82,7 @@ li {
 .dialog-task-dueDate,
 .dialog-task-priority {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 1em;
 }
 
@@ -102,6 +102,10 @@ li {
   display: flex;
   gap: 0.5em;
   align-items: center;
+  flex-wrap: wrap;
+}
+dialog {
+  max-width: 100vw;
 }
 
 /* style */
